challenge9/webdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdb-deployment
  namespace: siffreins
  labels:
    app: webdb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webdb
  template:
    metadata:
      labels:
        app: webdb
    spec:
      containers:
        - name: webdb-deployment
          image: siffreinsg/net4255_webdb:v4
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: "100M"
              cpu: "200m"
            requests:
              memory: "100M"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: webdb-service
  namespace: siffreins
spec:
  type: NodePort
  selector:
    app: webdb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
