challenge9/webnodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webnodb-deployment
  namespace: siffreins
  labels:
    app: webnodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webnodb
  template:
    metadata:
      labels:
        app: webnodb
    spec:
      containers:
        - name: webnodb-deployment
          image: siffreinsg/net4255_webnodb:v4
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: "200M"
              cpu: "500m"
            requests:
              memory: "100M"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: webnodb-service
  namespace: siffreins
spec:
  type: NodePort
  selector:
    app: webnodb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
