challenge9/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: siffreins
  annotations:
    # kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - host: webnodb.siffreins.net4255.luxbulb.org
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: webnodb-service
                port:
                  number: 80
    - host: webdb.siffreins.net4255.luxbulb.org
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: webdb-service
                port:
                  number: 80
